Decent modification to the initial scale,cookie handling , pane (iframe) load handling (lang) and ofcourse Index -> index

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,6 +54,18 @@
             "name": "http://127.0.0.1:3000/Index.html",
             "request": "launch",
             "url": "http://127.0.0.1:3000/Index.html"
+        },
+        {
+            "type": "pwa-chrome",
+            "name": "http://127.0.0.1:3000/lib/js/layout.js",
+            "request": "launch",
+            "url": "http://127.0.0.1:3000/lib/js/layout.js"
+        },
+        {
+            "type": "pwa-chrome",
+            "name": "http://127.0.0.1:3000/lib/js/custom.js",
+            "request": "launch",
+            "url": "http://127.0.0.1:3000/lib/js/custom.js"
         }
     ]
 }
